# fastapi-microservices-demo

./: .gitignore  Makefile  README.md
k8s/namespaces/: development-namespace.yaml
k8s/rabbitmq/dev/: configmap.yaml  deployment.yaml  service.yaml
k8s/users/: db-deployment.yaml
k8s/users/dev/: alembic-migration-job.yaml  configmap.yaml  db-deployment.yaml  db-service.yaml  deployment.yaml  service.yaml
users_service/: .pylintrc  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
users_service/alembic/: env.py
users_service/src/: main.py
users_service/src/alembic/: env.py
users_service/src/db/: database.py  model.py
users_service/src/db/mixins/: __init__.py
users_service/src/external_services/: posts_service.py
users_service/src/user/: user_api.py  user_api_schemas.py  user_bl.py  user_dal.py  user_models.py
users_service/users_service/: alembic.ini  config.py  main.py  requirements.txt
users_service/users_service/alembic/: env.py
users_service/users_service/alembic/versions/: acae3f9d6b28_add_newprop_column.py  e138a68372e2_initial_migration.py
users_service/users_service/api/middlewares/: db_session_middleware.py  error_handler_middleware.py
users_service/users_service/api/routes/: users_routes.py
users_service/users_service/bl/: users_bl.py
users_service/users_service/dal/: user_models.py  users_dal.py
users_service/users_service/db/: database.py  model.py
users_service/users_service/external_services/: posts_service.py  rabbitmq_client.py
