[tool.poetry]
name = "users-service"
version = "0.1.0"
description = "Users service for managing user data"
authors = ["Your Name <you@example.com>"]

packages = [
    { include = "users_service" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
sqlalchemy = "^2.0.16"
psycopg2-binary = "^2.9.6"
pika = "^1.3.0"
python-decouple = "^3.8"
httpx = "^0.24.1"
pydantic = {extras = ["email"], version = "^2.10.5"}
debugpy = "^1.8.11"
asyncpg = "^0.30.0"
alembic = "^1.14.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']